--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
         </div><!--Fim form-->
 
         <div id="weather-data"><!--Início weather data-->
-            <h2><i class="fa-solid fa-location-dot"></i></h2>
-            <span id="city">Maceio</span>
-            <img src="" alt="Bandeira do país" id="country">
+            <h2>
+                <i class="fa-solid fa-location-dot"></i>
+                <span id="city">Maceio</span>
+                <img src="https://www.countryflagicons.com/FLAT/64/BR.png" alt="Bandeira do país" id="country">
+            </h2>
             <p id="temperature"><span>38</span>&deg;C</p>
 
             <div id="description-container"><!--Início description container-->
                 <p id="description">Nublado</p>
-                <img src="" alt="Condições do tempo" id="weather-icon">
+                <img src="http://openweathermap.org/img/wn/01d.png" alt="Condições do tempo" id="weather-icon">
             </div><!--Fim description container-->
 
             <div id="details-container"><!--Início details container-->
