--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
             </div>
         </div><!--Fim form-->
 
-        <div id="weather-data"><!--Início weather data-->
+        <div id="weather-data" class="hide"><!--Início weather data-->
             <h2>
                 <i class="fa-solid fa-location-dot"></i>
-                <span id="city">Maceio</span>
-                <img src="https://www.countryflagicons.com/FLAT/64/BR.png" alt="Bandeira do país" id="country">
+                <span id="city">cidade </span>
+                <img src="" alt="Bandeira do país" id="country">
             </h2>
-            <p id="temperature"><span>38</span>&deg;C</p>
+            <p id="temperature"><span></span>&deg;C</p>
 
             <div id="description-container"><!--Início description container-->
-                <p id="description">Nublado</p>
-                <img src="http://openweathermap.org/img/wn/01d.png" alt="Condições do tempo" id="weather-icon">
+                <p id="description">descrição: </p>
+                <img src="" alt="Condições do tempo" id="weather-icon">
             </div><!--Fim description container-->
 
             <div id="details-container"><!--Início details container-->
-                <p id="umidity">
+                <p id="humidity">
                     <i class="fa-solid fa-droplet"></i>
                     <span>umidade</span>
                 </p>
                 
                 <p id="wind">
                     <i class="fa-solid fa-wind"></i>
-                    <span>3km/h</span>
+                    <span>km/h</span>
                 </p>
             </div><!--Fim details container-->
         </div><!--Fim weather data-->
